# profile-matcher

./: .gitignore  CHALLENGE.md  README.md  SPEC.md  docker-compose.yml  pyproject.toml
.github/workflows/: python-tests.yml
services/campaigns/: Dockerfile  main.py
services/profiles/: Dockerfile  dependencies.py  main.py  repository.py  service.py
services/profiles/api/: __init__.py  client_config.py  health.py
services/profiles/repository/: campaign.py  campaigns.py  campaigns_cache.py  campaigns_types.py  profile.py  profiles.py  profiles_types.py
tests/: test_api.py  test_api_health.py  test_campaigns_repository.py  test_component_profiles.py  test_profiles_repository.py  test_service.py
