[project]
name = "profile-matcher"
version = "0.1.0"
description = "Python microservices for campaign and profile management."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiocache>=0.12.3",
    "fastapi>=0.115.12",
    "httpx>=0.28.1",
    "motor>=3.7.0",
    "requests>=2.32.3",
    "uvicorn>=0.34.2",
]

[dependency-groups]
dev = [
    "hypothesis>=6.131.9",
    "pytest-asyncio>=0.26.0",
    "pytest>=8.3.5",
    "pytest-cov>=6.1.1",
    "pyright>=1.1.350",
]

[tool.pytest.ini_options]
pythonpath = "."
asyncio_default_fixture_loop_scope = "function"
